force-app/main/default/objects/PWChrono_Appraisal__c/PWChrono_Appraisal__c.object-meta.xml
<CustomObject>
    <label>PWChrono Appraisal</label>
    <nameField>
        <displayFormat>APR-{00000}</displayFormat>
        <label>Appraisal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PWChrono Appraisals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>