force-app/main/default/objects/PWChrono_Appraisal__c/fields/Achievements__c.field-meta.xml
<CustomField>
    <fullName>Achievements__c</fullName>
    <label>Achievements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>