force-app/main/default/objects/PWChrono_Appraisal__c/fields/Appraisal_Period__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Period__c</fullName>
    <label>Appraisal Period</label>
    <length>100</length>
    <type>Text</type>
</CustomField>