force-app/main/default/objects/PWChrono_Appraisal__c/fields/Company_Performance_Rating__c.field-meta.xml
<CustomField>
    <fullName>Company_Performance_Rating__c</fullName>
    <label>Company Performance Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>