force-app/main/default/objects/PWChrono_Appraisal__c/fields/Feedback__c.field-meta.xml
<CustomField>
    <fullName>Feedback__c</fullName>
    <label>Reviewer Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>