force-app/main/default/objects/PWChrono_Appraisal__c/fields/Outcome_Type__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Type__c</fullName>
    <label>Outcome Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salary Increment</fullName>
            </value>
            <value>
                <fullName>Performance Bonus</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
                <default>true</default>
                <label>No Change</label>
            </value>
            <value>
                <fullName>PIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>