force-app/main/default/objects/PWChrono_Appraisal__c/fields/Performance_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Performance_Cycle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Performance Cycle</label>
    <referenceTo>PWChrono_Performance_Cycle__c</referenceTo>
    <relationshipLabel>Appraisals</relationshipLabel>
    <relationshipName>Appraisals</relationshipName>
    <type>Lookup</type>
</CustomField>