force-app/main/default/objects/PWChrono_Appraisal__c/fields/Proposed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Amount__c</fullName>
    <label>Proposed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>