force-app/main/default/objects/PWChrono_Appraisal__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Appraisals (Reviewer)</relationshipLabel>
    <relationshipName>PWChrono_Appraisals_Reviewer</relationshipName>
    <type>Lookup</type>
</CustomField>