force-app/main/default/objects/PWChrono_Appraisal__c/fields/Reviewers__c.field-meta.xml
<CustomField>
    <fullName>Reviewers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewers</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Appraisal Reviewers</relationshipLabel>
    <relationshipName>Appraisal_Reviewers</relationshipName>
    <type>Lookup</type>
</CustomField>