force-app/main/default/objects/PWChrono_Appraisal__c/fields/Self_Rating__c.field-meta.xml
<CustomField>
    <fullName>Self_Rating__c</fullName>
    <description>Employee&apos;s self-rating (1-5)</description>
    <label>Self Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>