force-app/main/default/objects/PWChrono_Appraisal__c/listViews/My_Appraisals.listView-meta.xml
<ListView>
    <fullName>My_Appraisals</fullName>
    <columns>NAME</columns>
    <columns>Appraisal_Period__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Overall_Rating__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Appraisals</label>
</ListView>