force-app/main/default/objects/PWChrono_Appraisal__c/listViews/Pending_Appraisals.listView-meta.xml
<ListView>
    <fullName>Pending_Appraisals</fullName>
    <columns>NAME</columns>
    <columns>Appraisal_Period__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft,In Progress</value>
    </filters>
    <label>Pending Appraisals</label>
</ListView>